--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -362,10 +362,11 @@ jobs:
           Import-Module "C:\AtomicRedTeam\invoke-atomicredteam\Invoke-AtomicRedTeam.psd1" -Force
           Invoke-AtomicTest T1546.010
         shell: pwsh
-      - run: |
-          Import-Module "C:\AtomicRedTeam\invoke-atomicredteam\Invoke-AtomicRedTeam.psd1" -Force
-          Invoke-AtomicTest T1546.011
-        shell: pwsh
+      # - run: |
+      #     Import-Module "C:\AtomicRedTeam\invoke-atomicredteam\Invoke-AtomicRedTeam.psd1" -Force
+      #     Invoke-AtomicTest T1546.011
+      #   shell: pwsh
+      # Does not compute
       - run: |
           Import-Module "C:\AtomicRedTeam\invoke-atomicredteam\Invoke-AtomicRedTeam.psd1" -Force
           Invoke-AtomicTest T1546.012
