--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -382,10 +382,11 @@ jobs:
       #    Invoke-AtomicTest T1546.013
       #  shell: pwsh
       # Does not compute
-      - run: |
-          Import-Module "C:\AtomicRedTeam\invoke-atomicredteam\Invoke-AtomicRedTeam.psd1" -Force
-          Invoke-AtomicTest T1546.014
-        shell: pwsh
+      # - run: |
+      #     Import-Module "C:\AtomicRedTeam\invoke-atomicredteam\Invoke-AtomicRedTeam.psd1" -Force
+      #     Invoke-AtomicTest T1546.014
+      #   shell: pwsh
+      # Does not compute
       - run: |
           Import-Module "C:\AtomicRedTeam\invoke-atomicredteam\Invoke-AtomicRedTeam.psd1" -Force
           Invoke-AtomicTest T1547.001
