--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,7 +59,7 @@ jobs:
 
       - name: Run ac
         run: |
-          curl -o ac.zip https://github.com/forensicanalysis/artifactcollector/releases/download/v0.15.1/windows.zip
+          curl -Lo ac.zip https://github.com/forensicanalysis/artifactcollector/releases/download/v0.15.1/windows.zip
           7z x ac.zip
           ./artifactcollector.exe
           
