--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,12 +64,14 @@ jobs:
           ./artifactcollector.exe
           
         shell: bash
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
       - name: Run discoruns
         run: |
           7z x discoruns-dev-master.zip
-          ls
           cd discoruns-dev-master
-          ls
           python setup.py install
           cd ..
           discoruns --format=json forensicstore *.forensicstore > discoruns.json
