--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -118,6 +118,7 @@ jobs:
 
   summary:
     needs: [test, empty]
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/download-artifact@v2
         with:
